src/core/config/transformer/snapshots/tailcall__core__config__transformer__rename_args__tests__grpc_body_param.snap
---
source: src/core/config/transformer/rename_args.rs
expression: result.to_sdl()
---
type Query {
  newsByIdBatch(newsInput: JSON!): JSON! @grpc(body: "{{args.newsInput}}", method: "news.NewsService.GetMultipleNews")
}
