src/core/config/transformer/snapshots/tailcall__core__config__transformer__rename_args__tests__grpc_rename_args.snap
---
source: src/core/config/transformer/rename_args.rs
expression: transformed_config.to_sdl()
---
type Query {
  newsById(news: NewsInput!): News! @grpc(body: "{{.args.news}}", method: "news.NewsService.GetNews")
}
