src/core/config/transformer/snapshots/tailcall__core__config__transformer__rename_args__tests__rename_args.snap
---
source: src/core/config/transformer/rename_args.rs
expression: transformed_config.to_sdl()
---
type Query {
  user(userId: ID!, userName: String): JSON
}
